add encryption progress screen

--- a/RansomScare/RansomScare.csproj
+++ b/RansomScare/RansomScare.csproj
@@ -46,6 +46,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="EncryptionScreen.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="EncryptionScreen.Designer.cs">
+      <DependentUpon>EncryptionScreen.cs</DependentUpon>
+    </Compile>
     <Compile Include="SplashScreen.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -54,6 +60,9 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="EncryptionScreen.resx">
+      <DependentUpon>EncryptionScreen.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="SplashScreen.resx">
       <DependentUpon>SplashScreen.cs</DependentUpon>
     </EmbeddedResource>
