--- a/RansomScare/RansomScare.csproj
+++ b/RansomScare/RansomScare.csproj
@@ -46,6 +46,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Cryptography.cs" />
     <Compile Include="EncryptionScreen.cs">
       <SubType>Form</SubType>
     </Compile>
