--- a/RansomScare/RansomScare.csproj
+++ b/RansomScare/RansomScare.csproj
@@ -61,6 +61,12 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="EncryptedScreen.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="EncryptedScreen.Designer.cs">
+      <DependentUpon>EncryptedScreen.cs</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="EncryptionScreen.resx">
       <DependentUpon>EncryptionScreen.cs</DependentUpon>
     </EmbeddedResource>
@@ -76,6 +82,9 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="EncryptedScreen.resx">
+      <DependentUpon>EncryptedScreen.cs</DependentUpon>
+    </EmbeddedResource>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
