--- a/TedEncrypt/TedEncrypt.csproj
+++ b/TedEncrypt/TedEncrypt.csproj
@@ -50,6 +50,12 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Cryptography.cs" />
+    <Compile Include="DecryptedScreen.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="DecryptedScreen.Designer.cs">
+      <DependentUpon>DecryptedScreen.cs</DependentUpon>
+    </Compile>
     <Compile Include="DecryptionScreen.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -76,6 +82,9 @@
     <Compile Include="EncryptedScreen.Designer.cs">
       <DependentUpon>EncryptedScreen.cs</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="DecryptedScreen.resx">
+      <DependentUpon>DecryptedScreen.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="DecryptionScreen.resx">
       <DependentUpon>DecryptionScreen.cs</DependentUpon>
     </EmbeddedResource>
